# test-gtk

./: .gitignore  configure.ac
src/: Makefile.am  gtk.supp  login-dialog.ui  style.css  test-builder  test-builder.c  test-gtk.c  test-theming  test-theming.c
